--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -44,7 +44,9 @@
                             {% for p in post_list %}
                             <!-- Blog post-->
                                 <div class="card mb-4">
-                                    <a href="{{ p.get_absolute_url }}"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                    <a href="{{ p.get_absolute_url }}">
+                                        <img class="card-img-top" src="{{ p.head_image.url }}" alt="..." />
+                                    </a>
                                     <div class="card-body">
                                         <div class="small text-muted">{{ p.created_at }}</div>
                                         <h2 class="card-title h4">{{ p.title }}</h2>
@@ -115,10 +117,7 @@
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
         </footer>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+
     </body>
 </html>
 
