--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -44,9 +44,11 @@
                             {% for p in post_list %}
                             <!-- Blog post-->
                                 <div class="card mb-4">
-                                    <a href="{{ p.get_absolute_url }}">
-                                        <img class="card-img-top" src="{{ p.head_image.url }}" alt="..." />
-                                    </a>
+                                    {% if p.head_image %}
+                                        <a href="{{ p.get_absolute_url }}">
+                                            <img class="card-img-top" src="{{ p.head_image.url }}" alt="..." />
+                                        </a>
+                                    {% endif %}
                                     <div class="card-body">
                                         <div class="small text-muted">{{ p.created_at }}</div>
                                         <h2 class="card-title h4">{{ p.title }}</h2>
